--- a/ec_style.css
+++ b/ec_style.css
@@ -73,7 +73,8 @@ p{
 =============================================*/
 
 .header-section{
-    background: url(https://source.unsplash.com/5fNmWej4tAA/) no-repeat;
+    /* background: url(https://source.unsplash.com/5fNmWej4tAA/) no-repeat; */
+    background-image: url(images/ec_background.jpg);
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -87,7 +88,7 @@ p{
     top: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.3);
     /* z-index: 2; */
 }
 
@@ -143,10 +144,26 @@ p{
 
 .fa-long-arrow-alt-down{
     position: relative;
-    top: 250px;
-    animation: bounce 0.7s linear infinite;
+    top: 230px;
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
 
+
+    /* transition-property: transform; */
+    /* transition: 1s linear; */
+    /* transition-timing-function: ease-in; */
 }
+
+@keyframes bounce{
+    from{ transform: translateY(10px)}
+    to{transform: translateY(40px)}
+}
+
+/* .fa-long-arrow-alt-down:hover{
+    transform: translateY(30px);
+} */
 
 /*=====  End of Header  ======*/
 
