--- a/ec_style.css
+++ b/ec_style.css
@@ -54,9 +54,11 @@ h2{
 .btn{
     color: var(--secondary-color);
     border: 2px solid var(--secondary-color);
+    border-radius: 10px;
     font-size: 17px;
     padding: 10px 30px;
     margin-top: 10px;
+    
 }
 
 p{
@@ -64,6 +66,11 @@ p{
 }
 .active{
     color: var(--secondary-color);
+}
+
+a{
+    text-decoration: none;
+    color: var(--third-color); 
 }
 
 /*=====  End of General  ======*/
@@ -100,21 +107,18 @@ p{
 .header{
     display: flex;
     justify-content: space-between;
-    /* padding-top: 36px; */
-}
-
-.logo, .navbar{
-    color: #fff;
-    font-size: 26px; 
-    padding-top: 36px;
-}
-
-.logo{
-    background: none;
+    margin-left: 80px;
 }
 
 .navbar{
-    padding-top: 48px;
+    color: #fff;
+    font-size: 26px; 
+    padding-top: 45px;
+    /* padding-top: 36px; */
+}
+
+.logo{
+    padding-top: 20px;
 }
 
 .nav-list{
