--- a/dev/public/css/style.css
+++ b/dev/public/css/style.css
@@ -74,7 +74,7 @@ p{
 
 .header-section{
     /* background: url(https://source.unsplash.com/5fNmWej4tAA/) no-repeat; */
-    background-image: url(images/ec_background.jpg);
+    background-image: url("../images/ec_background.jpg");
     background-size: cover;
     width: 100%;
     height: 100vh;
